# kdev-java

./: CMakeLists.txt  Messages.sh  java.kdev4  javahighlighting.cpp  javahighlighting.h  javalanguagesupport.cpp  javalanguagesupport.h  javaparsertracker.cpp  javaparsertracker.h  kdev-java.kdev4  kdevjavasupport.desktop  kdevjavasupport.desktop.cmake  kdevjavasupport.json  parsejob.cpp  parsejob.h
completion/: context.cpp  context.h  helpers.cpp  helpers.h  items.cpp  items.h  model.cpp  model.h  worker.cpp  worker.h
duchain/: CMakeLists.txt  abstractexpressionvisitor.h  classdeclaration.cpp  classdeclaration.h  contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  ducontext.cpp  ducontext.h  dumpchain.cpp  dumpchain.h  editorintegrator.cpp  editorintegrator.h  expressionvisitor.cpp  expressionvisitor.h  helpers.cpp  helpers.h  identifiercompiler.cpp  identifiercompiler.h  javaduchainexport.h  missingdeclarationtype.cpp  missingdeclarationtype.h  overloadresolver.cpp  overloadresolver.h  topducontext.cpp  topducontext.h  typebuilder.cpp  typebuilder.h  typeconversion.cpp  typeconversion.h  typerepository.cpp  typerepository.h  types.cpp  types.h  typeutils.cpp  typeutils.h  usebuilder.cpp  usebuilder.h  viablefunctions.cpp  (+1 more)
duchain/output/: sample_dump.txt  sample_dump2.txt
duchain/tests/: CMakeLists.txt  javaduchaintest.cpp  javaduchaintest.h
parser/: CMakeLists.txt  FlexLexer.h  dumptree.cpp  dumptree.h  java.g  java_io.cpp  java_lexer.h  java_lexer.ll  javalexer.h  javalexer.ll  javaparserexport.h  parsesession.cpp  parsesession.h
parser/tests/: t001.java  t003.java
settings/: CMakeLists.txt  javaconfig.kcfg  javaconfig.kcfgc  javapreferences.cpp  javapreferences.h  javasettings.ui  kcm_kdev_javasettings.desktop
